[gd_scene load_steps=4 format=2]

[ext_resource path="res://TaskRow.gd" type="Script" id=1]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/TaskRowStyleBox.tres" type="StyleBox" id=3]

[node name="TaskRow" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_constants/separation = 6
script = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_top = 60.0
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 22 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 4

[node name="Name" type="Button" parent="."]
margin_left = 26.0
margin_right = 150.0
margin_bottom = 143.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Task name gfthyh"
clip_text = true

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 156.0
margin_right = 160.0
margin_bottom = 143.0
mouse_filter = 1

[node name="Time" type="Label" parent="."]
margin_left = 166.0
margin_top = 62.0
margin_right = 220.0
margin_bottom = 81.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 1
text = "00: 20"
align = 2

[connection signal="gui_input" from="CheckBox" to="." method="_on_CheckBox_gui_input"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="gui_input" from="Name" to="." method="_on_Name_gui_input"]
